# oci2git

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PACKAGING.md  README.md  RELEASE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security.yml
.github/workflows/: release.yml  rust.yml
argocd/: file.txt
assets/: nginx.cast
aur/: .SRCINFO  PKGBUILD  update-aur.sh
homebrew/: oci2git.rb  update-formula.sh
src/: container.rs  converter.rs  digest_tracker.rs  extracted_image.rs  git.rs  image_metadata.rs  lib.rs  main.rs  metadata.rs  notifier.rs  processor.rs  successor_navigator.rs  tar_extractor.rs
src/sources/: docker.rs  mod.rs  naming.rs  nerdctl.rs  registry.rs  source.rs  tar.rs
tests/: extracted_image_test.rs  integration_test.rs  tar_engine_test.rs
tests/integration/: mod.rs
tests/integration/common/: mod.rs  tar_processing.rs
tests/integration/docker/: mod.rs
tests/integration/fixtures/: Dockerfile  config.json  hardlink-test.Dockerfile  hello.txt  oci2git-test.tar  script.sh
tests/integration/fixtures/nifi-env/: Dockerfile
tests/integration/nerdctl/: mod.rs
tests/integration/tar/: mod.rs
