[package]
name = "oci2git"
version = "0.1.5"
edition = "2021"
authors = ["Dmitry Rubinstein <rubinsteindb@gmail.com>"]
description = "A tool to convert OCI images to Git repositories"
license = "MIT"
repository = "https://github.com/virviil/oci2git"
homepage = "https://github.com/virviil/oci2git"
documentation = "https://github.com/virviil/oci2git"
readme = "README.md"
keywords = ["oci", "git", "container", "docker", "image"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tempfile = "3.20"
tar = "0.4"
walkdir = "2.5"
git2 = "0.20"
chrono = "0.4"
oci-spec = { version = "0.8.1", features = ["image"] }
indicatif = "0.17"
log = "0.4"
env_logger = "0.11"

[features]
# default = ["nerdctl", "docker"]
default = []
test-utils = []
nerdctl = []
docker = []

[lib]
name = "oci2git"
path = "src/lib.rs"

[[bin]]
name = "oci2git"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
